--- a/NiziKit.Editor/EditorMainView.axaml
+++ b/NiziKit.Editor/EditorMainView.axaml
@@ -14,7 +14,7 @@
     </UserControl.Resources>
 
     <Panel>
-        <Grid RowDefinitions="Auto,*,Auto">
+        <Grid RowDefinitions="Auto,*">
             <Border Grid.Row="0"
                     Background="{StaticResource EditorPanelBackground}"
                     BorderBrush="{StaticResource EditorPanelBorder}"
@@ -105,114 +105,7 @@
                 </Border>
             </Grid>
 
-            <Border Grid.Row="2"
-                    Background="{StaticResource EditorPanelSecondaryBackground}"
-                    BorderBrush="{StaticResource EditorPanelBorder}"
-                    BorderThickness="0,1,0,0"
-                    Height="56">
-                <Grid ColumnDefinitions="*,Auto,*">
-                    <StackPanel Grid.Column="1"
-                                Orientation="Horizontal"
-                                Spacing="16"
-                                VerticalAlignment="Center">
-                        <ToggleButton IsChecked="{Binding IsContentBrowserOpen, Mode=TwoWay}"
-                                      Padding="20,8">
-                            <StackPanel Orientation="Horizontal" Spacing="10">
-                                <ui:SymbolIcon Symbol="Folder" FontSize="{StaticResource IconSizeBase}"/>
-                                <TextBlock Text="Content Browser" VerticalAlignment="Center"/>
-                            </StackPanel>
-                        </ToggleButton>
-                    </StackPanel>
-                </Grid>
-            </Border>
         </Grid>
-
-        <Grid IsVisible="{Binding IsContentBrowserOpen}"
-              ColumnDefinitions="Auto,*,Auto"
-              RowDefinitions="*,Auto,Auto">
-            <Border Grid.Column="0" Grid.Row="1" Width="380" Classes="spacer"/>
-            <Border Grid.Column="1" Grid.Row="1"
-                    Background="{StaticResource EditorPanelBackground}"
-                    BorderBrush="{StaticResource EditorPanelBorder}"
-                    BorderThickness="1,1,1,0"
-                    MinWidth="600"
-                    MinHeight="400"
-                    MaxHeight="900"
-                    Height="750">
-                <Grid RowDefinitions="Auto,Auto,*">
-                    <Border Grid.Row="0"
-                            Background="{StaticResource EditorAccentGradient}"
-                            Padding="16,10">
-                        <Grid ColumnDefinitions="Auto,Auto,*,Auto">
-                            <TextBlock Text="Content Browser"
-                                       Classes="subtitle"
-                                       Foreground="#FFFFFF"
-                                       VerticalAlignment="Center"
-                                       Margin="8,0,16,0"/>
-                            <Border Grid.Column="1"
-                                    Width="1"
-                                    Background="#40FFFFFF"
-                                    Margin="0,4"/>
-                            <ScrollViewer Grid.Column="2"
-                                          HorizontalScrollBarVisibility="Auto"
-                                          VerticalScrollBarVisibility="Disabled"
-                                          Margin="12,0">
-                                <ItemsControl ItemsSource="{Binding ContentBrowserViewModel.Tabs}">
-                                    <ItemsControl.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <StackPanel Orientation="Horizontal" Spacing="4"/>
-                                        </ItemsPanelTemplate>
-                                    </ItemsControl.ItemsPanel>
-                                    <ItemsControl.ItemTemplate>
-                                        <DataTemplate x:DataType="vm:ContentTab">
-                                            <Border Background="#20FFFFFF"
-                                                    Padding="12,6"
-                                                    Margin="2"
-                                                    Cursor="Hand"
-                                                    PointerPressed="OnContentBrowserTabPointerPressed">
-                                                <StackPanel Orientation="Horizontal" Spacing="8">
-                                                    <ui:SymbolIcon Symbol="Folder" FontSize="{StaticResource IconSizeXS}" Foreground="#FFFFFF"/>
-                                                    <TextBlock Text="{Binding Title}"
-                                                               Foreground="#FFFFFF"
-                                                               VerticalAlignment="Center"/>
-                                                    <Button IsVisible="{Binding IsCloseable}"
-                                                            Command="{Binding $parent[ItemsControl].DataContext.ContentBrowserViewModel.CloseTabCommand}"
-                                                            CommandParameter="{Binding}"
-                                                            Padding="4"
-                                                            Margin="4,0,0,0"
-                                                            Classes="ghost">
-                                                        <ui:SymbolIcon Symbol="Dismiss" FontSize="{StaticResource IconSizeXS}" Foreground="#FFFFFF"/>
-                                                    </Button>
-                                                </StackPanel>
-                                            </Border>
-                                        </DataTemplate>
-                                    </ItemsControl.ItemTemplate>
-                                </ItemsControl>
-                            </ScrollViewer>
-                            <Button Grid.Column="3"
-                                    Command="{Binding CloseContentBrowserCommand}"
-                                    ToolTip.Tip="Close"
-                                    Padding="8"
-                                    Classes="ghost">
-                                <ui:SymbolIcon Symbol="Dismiss" FontSize="{StaticResource IconSizeSmall}" Foreground="#FFFFFF"/>
-                            </Button>
-                        </Grid>
-                    </Border>
-                    <Border Grid.Row="1" Height="1" Background="{StaticResource EditorPanelBorder}"/>
-                    <views:ContentBrowserView Grid.Row="2"
-                                              DataContext="{Binding ContentBrowserViewModel}"/>
-                </Grid>
-            </Border>
-
-            <Border Grid.Column="2" Grid.Row="1" Width="420" Classes="spacer"/>
-            <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="56" Classes="spacer"/>
-        </Grid>
-
-        <Border IsVisible="{Binding ContentBrowserViewModel.IsAssetEditorOpen}"
-                Classes="dialog-overlay"
-                ZIndex="500">
-            <editors:AssetEditorDialog DataContext="{Binding ContentBrowserViewModel}"/>
-        </Border>
 
         <Border IsVisible="{Binding IsImportPanelOpen}"
                 Classes="dialog-overlay"
