--- a/NiziKit.Editor/Views/DraggableValueEditor.axaml
+++ b/NiziKit.Editor/Views/DraggableValueEditor.axaml
@@ -2,25 +2,32 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.DraggableValueEditor">
 
-    <Grid ColumnDefinitions="Auto,*">
-        <Border Grid.Column="0"
-                x:Name="DragLabel"
-                Background="{StaticResource EditorPanelElevated}"
-                Padding="10,8"
-                Cursor="SizeWestEast"
-                MinWidth="32">
-            <TextBlock x:Name="LabelText"
-                       Text="X"
-                       FontWeight="Bold"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"/>
-        </Border>
+    <Border Background="{StaticResource EditorPanelElevated}"
+            BorderBrush="{StaticResource EditorPanelBorder}"
+            BorderThickness="1"
+            CornerRadius="{StaticResource RadiusMedium}"
+            ClipToBounds="True">
+        <Grid ColumnDefinitions="Auto,*">
+            <Border Grid.Column="0"
+                    x:Name="DragLabel"
+                    Background="{StaticResource EditorDragLabelBg}"
+                    Padding="8,6"
+                    Cursor="SizeWestEast"
+                    MinWidth="30">
+                <TextBlock x:Name="LabelText"
+                           Text="X"
+                           FontWeight="Bold"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"/>
+            </Border>
 
-        <TextBox Grid.Column="1"
-                 x:Name="ValueTextBox"
-                 CornerRadius="0"
-                 BorderThickness="1,1,1,1"
-                 Padding="10,8"
-                 MinWidth="60"/>
-    </Grid>
+            <TextBox Grid.Column="1"
+                     x:Name="ValueTextBox"
+                     CornerRadius="0"
+                     BorderThickness="0"
+                     Background="Transparent"
+                     Padding="8,6"
+                     MinWidth="50"/>
+        </Grid>
+    </Border>
 </UserControl>
